bug docs: make the search results appear at the visible area (#2505)
Tests: протестировано локально, на прод не влияет
Relates: TAXICOMMON-4647

--- a/scripts/docs/customdoxygen.css
+++ b/scripts/docs/customdoxygen.css
@@ -41,6 +41,11 @@
     html {
       scroll-padding-top: 75px;
     }
+
+    .stickySearchResults {
+      position: fixed !important;
+      top: 30px !important;
+    }
 }
 
 /* Too wide page makes people uncomfortable, keep content in center */
